# cpp-learn

project_layout/: CMakeLists.txt  README.md
project_layout/src/: CMakeLists.txt  main.cc  mymath.cc
project_layout/test/: CMakeLists.txt  test_math.cc
